---
source: crates/pcb-zen/tests/load_diagnostics.rs
expression: netlist
---
Error: [TEMP_DIR]test.zen:3:1-33 Failed to resolve module path './nonexistent.zen'
